[project]
name = "apachellmpack"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["groq"]

[project.urls]
Repository = "https://github.com/Apache0ne/apachellmpack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "apachellmpack"
Icon = ""
