[project]
name = "sambanova"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests", "pydantic", "fastapi", "sentry_sdk", "tenacity", "openai", "tiktoken", "anthropic"]

[project.urls]
Repository = "https://github.com/Apache0ne/SambaNova"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "SambaNova"
Icon = ""
